<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>doom_ros</name>
  <version>1.0.1</version>
  <description>Doom can run anywhere. Now it runs on ROS too.</description>
  <maintainer email="gstavrinos@protonmail.com">rosez_user</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>cydoomgeneric</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
